--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "literank.com",
   "license": "MIT",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.13.1",
     "express": "^4.19.2"
   },
   "devDependencies": {
