Add search index config item

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "page_size": 10
   },
   "search": {
-    "address": "http://localhost:9200"
+    "address": "http://localhost:9200",
+    "index": "book_idx"
   }
 }
