--- a/compose/config.json
+++ b/compose/config.json
@@ -4,6 +4,7 @@
     "page_size": 10
   },
   "search": {
-    "address": "http://es:9200"
+    "address": "http://es:9200",
+    "index": "book_idx"
   }
 }
